# Bot

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.txt  __init__.py  audit.txt  backtester.py  bot.py  exchange_manager.py  mafs.txt  portfolio_manager.py  pyproject.toml  pytest-roadmap.txt  pytest.ini  requirements.txt  setup.py
accounting/: __init__.py  accounting.py
backtesting/: backtester.py  performance.py  results.py
bot_types/: base_types.py
config/: config.json  config.py  risk_config.py  validation.py
data/: candles.db.sql  candles.py  data_sanity_report.txt  z.py
database/: __init__.py  connection.py  database.py  queries.py  schema.py
exchanges/: __init__.py  actual_exchange.py  exchange_manager.py  paper_exchange.py  rate_limiter.py
execution/: bot.py  exchange_interface.py  exchange_status.py  fills.py  main_loop.py  market_data.py  order_manager.py  position_manager.py  ratchet_manager.py  risk_manager.py  validation.py
indicators/: __init__.py  indicators_pta.py  quality_monitor.py
information/: AuditFailed.txt  Data_Warehousing.ipynb  FutureV2FeaturesPostDeploy.md  FutureWowFeatures.txt  Important.md  Important.txt  KeyNextSteps.md  KeyNextSteps.txt  Prompts.md  RoadMap.txt  Roadmap-Point3-Promt.md  Roadmap.md  StatusReport.md  system-protocol.md
ingestion/: __init__.py  exchange_data.py
models/: ga_signal.py  ml_signal.py  train.py
monitoring/: metrics.py  position_monitor.py
risk/: constants.py  exposure.py  interfaces.py  limits.py  manager.py  portfolio.py  position.py  validation.py
(+250 files in other folders)
