[tool.poetry]
name = "KillaBot"
version = "0.1.1"
description = "Automated trading Bot"
authors = ["Phil Sanderson <philsanderson@pm.me>, Mike Van-Dijk <mike@.com>"]
packages = [
  { include = "killabot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.17.0"
ccxt = "^2.0.0"
pandas = "^1.4.0"
numpy = "^1.21.0"
scikit-learn = "^1.0.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 